# infotecs-cpp-trainee-assignment

./: CMakeLists.txt  README.md
.github/workflows/: mainline.yml
src/: CMakeLists.txt
src/logger/: CMakeLists.txt  file_sink.cpp  file_sink.hpp  log_level.hpp  logger.cpp  logger.hpp  sink.hpp  socket_sink.cpp  socket_sink.hpp  utility.cpp  utility.hpp
src/metrics_application/: CMakeLists.txt  main.cpp  message_processor.cpp  message_processor.hpp  message_stats.hpp  metrics_application.cpp  metrics_application.hpp  metrics_collector.cpp  metrics_collector.hpp  socket_server.cpp  socket_server.hpp  utility.cpp  utility.hpp
src/test_application/: CMakeLists.txt  argument_parser.cpp  argument_parser.hpp  command_parser.cpp  command_parser.hpp  log_entry.hpp  main.cpp  test_application.cpp  test_application.hpp  thread_safe_queue.hpp  utility.cpp  utility.hpp
unit/: CMakeLists.txt
unit/logger/: CMakeLists.txt  file_sink_test.cpp  utility_test.cpp
unit/metrics_application/: CMakeLists.txt  metrics_collector.cpp  utility_test.cpp
unit/test_application/: CMakeLists.txt  argument_parser.cpp  command_parser.cpp
